integrated openie preprocessing and processing as well, now a single command generates plotting data from the crawled data